--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,33 @@
 {
-    "name": "amprise-panel-backend",
-    "version": "2.0.0",
-    "description": "Industrial Grade Panel Estimation System",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "init-db": "node database/init.js",
-      "production": "NODE_ENV=production node server.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "sqlite3": "^5.1.7",
-      "sqlite": "^5.1.1",
-      "bcryptjs": "^2.4.3",
-      "jsonwebtoken": "^9.0.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "pdfkit": "^0.14.0",
-      "helmet": "^7.1.0",
-      "express-rate-limit": "^7.1.5",
-      "compression": "^1.7.4",
-      "morgan": "^1.10.0",
-      "express-validator": "^7.0.1",
-      "uuid": "^9.0.1"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.1"
-    }
+  "name": "amprise-panel-backend",
+  "version": "2.0.0",
+  "description": "Industrial Grade Panel Estimation System",
+  "main": "server.js",
+  "engines": {
+    "node": "18.20.4"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "init-db": "node database/init.js",
+    "postinstall": "npm rebuild sqlite3 --build-from-source",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7",
+    "sqlite": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "pdfkit": "^0.14.0",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
+}
